feat: ajout route pretRoutes.js + documentation Swagger des prêts
